# stacorust

./: .gitignore  .travis.yml  Cargo.toml  README.md  config.toml  configtest.toml
.circleci/: config.yml
src/: config.rs  lib.rs  mailer.rs  main.rs  template.rs
