[package]
name = "stacorust"
version = "0.1.0"
authors = ["Yax"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
rust-embed = "5.2.0"
toml = "0.5.6"
imap = "1.0.2"
native-tls = "0.2.3"
#lettre = "0.9.2"